--- a/Earthquake_Data_Team3/.classpath
+++ b/Earthquake_Data_Team3/.classpath
@@ -3,5 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="gmapsfx/GMapsFX-2.12.0.jar"/>
+	<classpathentry kind="lib" path="gmapsfx/logback-classic-1.2.1.jar"/>
+	<classpathentry kind="lib" path="gmapsfx/logback-core-1.2.1.jar"/>
+	<classpathentry kind="lib" path="gmapsfx/slf4j-api-1.7.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
